--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   var options = {
     useSSL: true,
     userName: "qntuswfx",
-    password: "	I-w8dBujcz3e",
+    password: "I-w8dBujcz3e",
     onSuccess:onConnect,
     onFailure:doFail
   }
@@ -70,6 +70,8 @@
   // called when a message arrives
   function onMessageArrived(message) {
     console.log("onMessageArrived:"+message.payloadString);
+	sen=document.getElementById('sensor_val');
+	sen.innerHTML=message.payloadString;
 	doAction(message.payloadString);
   }
   
